--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
-    "mongoose": "^5.9.27"
+    "mongoose": "^5.9.27",
+    "multer": "^1.4.2",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
